[package]
name = "image-sorter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.42.0"
clap = { version = "4.0.32", features = ["derive"] }
# json5 = "0.4.1"
lazy_static = "1.4.0"
nannou = "0.18"
nannou_egui = "0.5.0"
rust-fuzzy-search = "0.1.1"
serde = "1.0.152"
serde_json = "1.0.91"
serde_yaml = "0.9.25"
structstruck = "0.3.0"

